Users can now add custom licenses to projects on project admin panel.

--- a/plugins/multiproject/multiproject/project/admin/templates/admin_categories.html
+++ b/plugins/multiproject/multiproject/project/admin/templates/admin_categories.html
@@ -85,12 +85,13 @@ from multiproject.core.configuration import conf
                         <legend>Other category name</legend>
                         <input type="text" name="category_name" id="new_category_${context.context_id}" class="new_context_category" />
                         <input type="hidden" name="context_id" value="${context.context_id}" />
+                        <input type="text" name="license_url" placeholder="URL" id="license_url" title="Place license url here if exists"
+                        py:if="context.name == 'License'"/>
                         <input type="submit" name="add_and_bind" value="Add your own"/>
                         <p>Adds existing or creates new ${context.name} category.</p>
                     </fieldset>
                 </form>
             </div>
-
             </py:with>
         </py:for>
       </py:with>
