--- a/themes/default/htdocs/css/core.css
+++ b/themes/default/htdocs/css/core.css
@@ -68,56 +68,49 @@ sub {
 /* Welcome page navigation styles */
 
 ul#frontpage_navigation {
-  margin: 0 0 15px 0;
+  margin: 10px 0;
   list-style-type: none;
+  clear: both;
 }
 
 #frontpage_navigation li {
   display: inline-block;
-  border-left: 1px solid #e7e7e7;
-  padding-left: 10px;
-  width: 220px;
+  *display:inline;
+  zoom:1;
   vertical-align: top;
+  background: #efefef;
+  padding: 10px 15px;
+  width: 20%;
+  min-height: 85px;
 }
 
 #frontpage_navigation li:first-child {
-  border-left: none;
-  padding-left: 0;
+  color: #999;
+  font-size: 16px;
+  width: 26%;
 }
 
 #frontpage_navigation li h3 {
-  margin: 2px 0;
+  margin: 5px 0 0 0;
   display: block;
+  color: #222;
 }
 
 #frontpage_navigation li span {
   display: block;
   min-height: 40px;
-  color: black;
 }
 
 #frontpage_navigation a {
   display: block
 }
 
-#frontpage_navigation #punch_line {
-  color: #a9a9a9;
-  font-size: 17px;
-  font-family: Tahoma, Geneva, sans-serif;
-}
-
-/* The admin link */
-
-#admin_link {
-  padding-top: 10px;
-  font-family: Tahoma, Geneva, sans-serif;
-}
-
 /* Site title icon and text, also used in explore projects and create project */
 
 #site_title {
-  background: url(../images/large_project_ico.png) no-repeat scroll left center transparent;
+  background: url(../images/large_project_ico.png) no-repeat left top;
   padding-left: 62px;
+  line-height: 38px;
 }
 
 #welcomepage #site_title {
