Layout fixes for my projects view

--- a/plugins/multiproject/multiproject/home/frontpage/templates/list_watchlist_events.html
+++ b/plugins/multiproject/multiproject/home/frontpage/templates/list_watchlist_events.html
@@ -32,7 +32,7 @@
     <py:otherwise>
         <ul>
         <li>
-        <div class="greyBgContainer" style="margin-left:10%;width:80%;">
+        <div class="greyBgContainer">
             <div class="greyBgContent">
                 No events in timeline
             </div>
