Layout fixes for new project and plugins views

--- a/plugins/multiproject/multiproject/home/admin/templates/admin_home_plugins.html
+++ b/plugins/multiproject/multiproject/home/admin/templates/admin_home_plugins.html
@@ -98,7 +98,14 @@
         </py:if>
         <table class="listing">
           <thead>
-               <tr><th>Component</th><th class="sel" colspan="2"><div>Enabled</div><span>Home</span><span>Project</span></th></tr>
+            <tr>
+              <th>
+                Component
+                <span class="hint">Enabled for</span>
+              </th>
+              <th class="sel">Home project</th>
+              <th class="sel">All projects</th>
+            </tr>
           </thead>
           <tbody>
             <tr py:for="component in plugin.components">
