--- a/plugins/multiproject/multiproject/common/users/templates/multiproject_user_prefs_ssh_keys.html
+++ b/plugins/multiproject/multiproject/common/users/templates/multiproject_user_prefs_ssh_keys.html
@@ -35,31 +35,15 @@
   </div>  
   
   <div class="ssh_keys_container" py:if="keys">
-    <h2 class="title"><span>Current Git SSH key</span></h2>
-    <table>
-      <tr>
+    <h2 class="title"><span>Current Git SSH key(s)</span></h2>
+    <table id="ssh_key_table">
+      <tr class="ssh_key_table_header">
         <th>Description</th><th>SSH key</th><th>Delete</th>
       </tr>
       <tr py:for="key in keys">
         <td>${key.description}</td><td>${key.ssh_key[0:30]}...</td><td><input type="checkbox" name="deletelist" value="${key.key_id}" /></td>
       </tr>
      </table>
-    <!--<dl py:for="key in keys">
-      <fieldset>
-        <legend>Added: ${key.added}</legend>
-        <div py:if="key.description">
-          <label for="currentdescription">Description</label>
-          <br />
-          <input name="currentdescription" id="currentdescription" type="text" class="sshkey" readonly="readonly" value="${key.description}" />
-        </div>
-      <label for="currentkey">SSH key</label>
-      <br />
-      <textarea name="currentkey" id="currentkey" class="sshkey" rows="6" readonly="readonly">${key.ssh_key}</textarea>
-      <br />
-      <label id="sshdelete" for="deletelist"><input type="checkbox" name="deletelist" value="${key.key_id}" /> Delete</label><br />
-      </fieldset>
-      <p />
-    </dl>-->
   </div>
   
   <div class="ssh_keys_container">
