Added email check.

--- a/plugins/multiproject/multiproject/home/admin/templates/admin_user_create.html
+++ b/plugins/multiproject/multiproject/home/admin/templates/admin_user_create.html
@@ -40,7 +40,8 @@
                     <tr>
                         <td class="label required"><label for="email">Email</label></td>
                         <td>
-                            <input type="text" id="email" name="email" size="80" value="${mail}" />
+                            <input type="text" id="email" name="email" size="60" value="${mail}" />
+                            <a id="checkEmail" href="#" class="primaryButton">Check availability</a>
                         </td>
                     </tr>
                     <tr>
