--- a/plugins/multiproject/multiproject/common/web/htdocs/css/multiproject.css
+++ b/plugins/multiproject/multiproject/common/web/htdocs/css/multiproject.css
@@ -277,11 +277,19 @@
     right: 0;
 }
 
+.project_search #search_container {
+    border-bottom: 1px solid #0066CB;
+    clear: both;
+    display: block;
+    float: left;
+    margin-bottom: 10px;
+    width: 100%;
+}
+
 /** Results per page **/
 .project_search #resultsPerPageDiv {
-    position: absolute;
     top: 0px;
-    left: 210px;
+    float: left;
 }
 
 .project_search #resperpage {
@@ -314,6 +322,7 @@
     background: #f8f7f2;
     padding: 12px 15px 12px 10px;
     margin-bottom: 11px;
+    clear: both;
 }
 
 #project_search_attribs #keyword_attribs {
