--- a/themes/default/htdocs/css/ui.css
+++ b/themes/default/htdocs/css/ui.css
@@ -207,13 +207,12 @@ blockquote {
 ul#tabbedNavigation {
     list-style-type: none;
     list-style-image: none;
-    margin: 0 0 30px 0;
-    width: 100%;
+    margin: 0;
     font-family: Tahoma,Geneva,sans-serif;
     height:26px;
     font-size:13px;
     line-height:26px;
-    border-bottom: 1px solid #0066cb;
+    float: left;
 }
 #tabbedNavigation li {
     float: left;
