--- a/plugins/multiproject/multiproject/home/projectlist/templates/create_form.html
+++ b/plugins/multiproject/multiproject/home/projectlist/templates/create_form.html
@@ -99,7 +99,7 @@ from multiproject.core.configuration import conf
                     </div>
                   </div>
 
-                  <div style="clear: both;">
+                  <div style="clear: both; display: none;">
                     <label for="vcs-clone" class="question">Clone existing</label>
                     <div class="answer">
                       <input id="vcs-clone" type="radio" name="scm_source" value="clone" title="Clone"/>
