Changed pagination position.

--- a/plugins/multiproject/multiproject/home/projectlist/templates/find.html
+++ b/plugins/multiproject/multiproject/home/projectlist/templates/find.html
@@ -141,7 +141,7 @@ from multiproject.core.configuration import conf
                         </p>
                     </div>
                 </div>
-
+                <div id="pagination_container"><!-- AJAX call container --></div>
                 <div id="project_search_attribs">
                     <!--! Will have class 'with_keywords', if keywords, and 'searching', if searching. -->
                     <p id="keyword_attribs">
