--- a/plugins/multiproject/multiproject/common/web/htdocs/css/multiproject.css
+++ b/plugins/multiproject/multiproject/common/web/htdocs/css/multiproject.css
@@ -271,10 +271,7 @@
 }
 
 .project_search #upper_pagination {
-    line-height: 26px;
-    position: absolute;
-    top: 0;
-    right: 0;
+    margin-top: -10px;
 }
 
 .project_search #search_container {
