--- a/plugins/multiproject/multiproject/project/admin/templates/admin_vcm.html
+++ b/plugins/multiproject/multiproject/project/admin/templates/admin_vcm.html
@@ -13,7 +13,7 @@
 <h1>Reposity manager</h1>
 <div id="repository_container">
     <h2>Repositories</h2>
-    <form method="delete" action="" id="delete_repositories" py:if="len(repositories) > 0">
+    <form method="post" action="" id="delete_repositories" py:if="len(repositories) > 0">
         <table>
             <tr class="repo_table_header">
                 <th>Name</th><th>Type</th><th>Delete</th>
