Added guidlines for repository name,

--- a/plugins/multiproject/multiproject/home/projectlist/templates/create_form.html
+++ b/plugins/multiproject/multiproject/home/projectlist/templates/create_form.html
@@ -70,7 +70,7 @@ from multiproject.core.configuration import conf
               <div class="shaded-box-description"><strong>Identifier</strong> is a computer-friendly identifier for your project, this will determine the URL of your project and of your repository. Choose something simple and easy to remember. Only alphanumeric characters and underscore are allowed. Identifier is case sensitive.</div>
               <div class="shaded-box-description"><strong>Description</strong> is meant to be a text that describes your project. The text will be seen by visitors of your project and should describe clearly what your project is and what you want to achieve, make sure it's clear, complete and yet not too long, you will be able to use your Wiki to go into all the details.</div>
               <div class="shaded-box-description" py:if="conf.allow_public_projects"><strong>Public projects</strong> are visible to all, but only members can operate, private projects are visible only to members and admins should invite participants. At any stage you will be allowed to revert your decision.</div>
-              <div class="shaded-box-description"><strong>Version control</strong> is the type of repository that you want to use, if unsure, use Subversion. You can also clone repository from existing project.</div>
+              <div class="shaded-box-description"><strong>Version control</strong> is the type of repository that you want to use, if unsure, use Subversion. You can also clone repository from existing project.<p>Multiproject support multiple repositores for projects. The repository name should describe content of the repository.</p></div>
       	    </div>
           </div>
 
